--- a/RDManager/RDManager.csproj
+++ b/RDManager/RDManager.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>mycomputer1_72px.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AxMSTSCLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\AxMSTSCLib.dll</HintPath>
@@ -106,11 +109,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="desktop_remote_72px.ico" />
+    <Content Include="mycomputer1_64px.ico" />
+    <Content Include="mycomputer1_72px.ico" />
     <Content Include="packages\AxMSTSCLib.dll" />
     <Content Include="packages\MSTSCLib.dll" />
     <Content Include="rds.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Window_remote_desktop_icon_72px.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
