1. support encrypt password.

--- a/RDManager/RDManager.csproj
+++ b/RDManager/RDManager.csproj
@@ -133,6 +133,7 @@
     <Content Include="packages\MSTSCLib.dll" />
     <Content Include="rds.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
